# sfml_stars

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
src/entity/: entity_constants.hpp  stars.hpp
src/window_manager/: events.hpp  window_constants.hpp
